# rust-algorithm-collection

./: Cargo.toml  main  main.rs
src/: main.rs
src/project_euler/: mod.rs  problem_1.rs  problem_2.rs  problem_3.rs  problem_4.rs
